[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1,<2", "coverage[toml]>=5,<6", "virtualenv>=20.2"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "chemserve"
version = "0.1.0"
description = "Turn any rdkit cheminformatics function into a daemon that responds to JSON queries."
keywords = ["rdkit", "draw", "chemical", "structure"]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dmyersturnbull/chemserve"
repository = "https://github.com/dmyersturnbull/chemserve"
documentation = "https://chemserve.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Scientific/Engineering :: Chemistry"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/chemserve/actions"
Issues = "https://github.com/dmyersturnbull/chemserve/issues"
Download = "https://pypi.org/project/chemserve/"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                   = ">=3.8, <4"
tomlkit                  = ">=0.7, <1.0"
typer                    = ">=0.3, <1.0"
CairoSVG                 = ">=2.5, <3.0"
Pillow                   = ">=8.1, <9.0"
serviceit                = ">=0.2, <0.3"

[tool.poetry.dev-dependencies]
pre-commit               = ">=2.9, <3.0"
pre-commit-hooks         = ">=3.4, <4.0"
bandit                   = ">=1.7, <2.0"
black                    = {git = "https://github.com/psf/black.git", rev="f07832eac44e"}
pytest                   = "^6"
coverage                 = {extras = ["toml"], version = "^5"}
pytest-cov               = "^2"
flake8                   = "^3"
flake8-docstrings        = "^1"
flake8-bugbear           = "^20"
sphinx                   = "^3"
sphinx-autoapi           = "^1"
sphinx-rtd-theme         = ">=0.5, <1.0"
tox-conda                = ">=0.5, <1.0"

[tool.poetry.extras]
dev = [
    "pre-commit", "pre-commit-hooks",
    "black", "bandit",
    "pytest", "coverage", "pytest-cov",
    "flake8", "flake8-docstrings", "flake8-bugbear",
    "tox-conda",
    "sphinx", "sphinx-autoapi"
]

#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align    = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "'2020-06-03'"
copyright          = "'Copyright 2020–2021'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
contributors = [
]
maintainers = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/chemserve/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true
environment  = true


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["chemserve"]

[tool.coverage.run]
source = ["chemserve"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[mypy]
check_untyped_defs = true
strict_optional = true
